test/parser/while.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    while (-) {}
    
    // CHECK: [[# @LINE + 1 ]]:15: error: expected 'while' body
    while (0) ;

    while (0) {
        1;
    }
    // CHECK: WhileStmt
    // CHECK-NEXT:   IntLiteral '0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:     IntLiteral '1'
}
